# kstack_metaflow

./: .gitignore  Dockerfile  Dockerfile_batch  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: flow.py
src/utils/: aws_secrets.py
